--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,6 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
@@ -40,4 +39,10 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="helpline">NATIONAL HELPLINE NUMBER</string>
+    <string name="dial_helpline">COVID-19 HELPLINE NUMBER</string>
+    <string name="schedule_vaccine">SCHEDULE YOUR VACCINE</string>
+    <string name="who">WHO WEBSITE</string>
+    <string name="worldometer">COVID TRACKER</string>
+    <string name="know_vaccine">KNOW YOUR VACCINE</string>
 </resources>
